--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPGnPWfTUqiMCsKLIUPOrkEZBMDVeB-BmjeA&s') no-repeat center center fixed;
     background-size: cover;
     color: #333;
+    padding: 20px;
+
 }
 h1{
     color: blue;
@@ -71,7 +73,7 @@ h1{
     border: none;
     border-radius: 5px;
     font-size: 16px;
-    margin-left: 10px;
+    margin-top: 10px;
     cursor: pointer;
 }
 
